wp-content/themes/plaxer/css/main.css
/* ... */
.navigation .menu > li > a {
  display: flex;
  align-items: center;
  height: 100%;
}

.navigation .menu > li > a span {
  position: relative;
}

.navigation-hover-style1 .navigation .menu > li > a span:before {
  content: "";
  position: absolute;
  bottom: -7px;
  left: 0;
  width: 0;
  height: 3px;
  transition: 400ms ease-in-out;
  transition-property: width;
  box-shadow: inset 0 0 0 5px;
  transform: skewX(-55deg);
}

.heading-block.tal.with-decor-block .h::before {
  content: "";
  position: absolute;
  bottom: -24px;
  left: 0;
  width: 158px;
  height: 8px;
  border-radius: 16px;
}

.heading-block.tal.with-decor-block p {
  margin-top: 1.75rem;
  font-size: 2.4rem;
}

@media (max-width: 991.98px) {
  .heading-block.tal.with-decor-block p {
    font-size: 1.8rem;
  }
}

.navigation-hover-style2 .navigation .menu > li > a span {
  padding: 0 3px;
  margin: 0 -3px;
}

.navigation-hover-style2 .navigation .menu > li > a span:before {
  content: "";
  position: absolute;
  top: 50%;
  left: 50%;
  height: 1px;
  width: 0;
  transition: 400ms ease-in-out;
  transition-property: width;
  box-shadow: inset 0 0 0 5px;
  transform: translateX(-50%);
}

.navigation-hover-style3 .navigation .menu > li > a span:before {
  content: "";
  position: absolute;
  bottom: -8px;
  left: 50%;
  width: 5px;
  height: 5px;
  border-radius: 50%;
  margin-left: -2.5px;
  transform: scale(0);
  transition: 400ms ease-in-out;
  transition-property: transform;
  box-shadow: inset 0 0 0 5px;
}

.navigation-hover-style4 .navigation .menu > li > a span:before {
  content: "";
  position: absolute;
  bottom: 2px;
  left: 0;
  right: 0;
  height: 0px;
  transition: 400ms ease-in-out;
  transition-property: height;
  box-shadow: inset 0 0 0 5px;
  z-index: -1;
}

.navigation .menu > li:not(:last-of-type) {
  margin-right: 30px;
}

.navigation-hover-style1 .navigation .menu li.current-menu-item > a span:before,
.navigation-hover-style1 .navigation .menu li:hover > a span:before,
.navigation-hover-style1
  .navigation
  .menu
  li.current-menu-ancestor
  > a
  span:before,
.navigation-hover-style1 .navigation .menu li.current_page_item > a span:before,
.navigation-hover-style1
  .navigation
  .menu
  li.current_page_parent
  > a
  span:before,
.navigation-hover-style1
  .navigation
  .menu
  li.current-menu-ancestor
  > a
  span:before {
  width: 100%;
}

.navigation-hover-style2 .navigation .menu li.current-menu-item > a span:before,
.navigation-hover-style2
  .navigation
  .menu
  li.current-menu-ancestor
  > a
  span:before,
.navigation-hover-style2 .navigation .menu li.current_page_item > a span:before,
.navigation-hover-style2
  .navigation
  .menu
  li.current_page_parent
  > a
  span:before,
.navigation-hover-style2
  .navigation
  .menu
  li.current-menu-ancestor
  > a
  span:before {
  width: 100%;
}

.navigation-hover-style3 .navigation .menu li.current-menu-item > a span:before,
.navigation-hover-style3
  .navigation
  .menu
  li.current-menu-ancestor
  > a
  span:before,
.navigation-hover-style3 .navigation .menu li.current_page_item > a span:before,
.navigation-hover-style3
  .navigation
  .menu
  li.current_page_parent
  > a
  span:before,
.navigation-hover-style3
  .navigation
  .menu
  li.current-menu-ancestor
  > a
  span:before {
  transform: scale(1);
}

.navigation-hover-style4 .navigation .menu li.current-menu-item > a span:before,
.navigation-hover-style4
  .navigation
  .menu
  li.current-menu-ancestor
  > a
  span:before,
.navigation-hover-style4 .navigation .menu li.current_page_item > a span:before,
.navigation-hover-style4
  .navigation
  .menu
  li.current_page_parent
  > a
  span:before,
.navigation-hover-style4
  .navigation
  .menu
  li.current-menu-ancestor
  > a
  span:before {
  height: 6px;
}

.navigation.on-center .menu {
  justify-content: center;
}

.navigation li:not(.mega-menu-col) > .sub-menu,
.navigation li:not(.mega-menu-col) > .children {
  position: absolute;
  width: 220px;
  left: 0;
  top: 100%;
  margin-top: 0px;
  font-size: 12px;
  color: #fff;
  font-weight: 500;
  z-index: 1;
  padding: 15px 25px;
  text-transform: uppercase;
  background: #1a1a1a;
}

.navigation li:not(.mega-menu-col) > .sub-menu li.menu-item-has-children,
.navigation li:not(.mega-menu-col) > .children li.menu-item-has-children {
  position: relative;
}

.navigation li:not(.mega-menu-col) > .sub-menu li.menu-item-has-children:before,
.navigation
  li:not(.mega-menu-col)
  > .children
  li.menu-item-has-children:before {
  content: "";
  position: absolute;
  top: 50%;
  right: 0;
  width: 0;
  height: 0;
  margin-top: -4px;
  border-top: 4px solid transparent;
  border-left: 5px solid;
  border-bottom: 4px solid transparent;
}

.navigation li:not(.mega-menu-col) > .sub-menu .sub-menu,
.navigation li:not(.mega-menu-col) > .sub-menu .children,
.navigation li:not(.mega-menu-col) > .children .sub-menu,
.navigation li:not(.mega-menu-col) > .children .children {
  padding: 5px 15px;
}

@media (min-width: 992px) {
  .navigation li:not(.mega-menu-col) > .sub-menu .sub-menu,
  .navigation li:not(.mega-menu-col) > .sub-menu .children,
  .navigation li:not(.mega-menu-col) > .children .sub-menu,
  .navigation li:not(.mega-menu-col) > .children .children {
    left: 100%;
    top: -15px;
    margin-left: 25px;
    padding: 15px 25px;
  }
}

.navigation li:not(.mega-menu-col) > .sub-menu li,
.navigation li:not(.mega-menu-col) > .children li {
  margin: 0 0;
}

.navigation li:not(.mega-menu-col) > .sub-menu li > a:before,
.navigation li:not(.mega-menu-col) > .children li > a:before {
  content: "";
  position: absolute;
  left: 0;
  width: 0;
  bottom: 4px;
  height: 3px;
  transition: all 400ms ease-in-out;
}
/* ... */

